--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shiftwalk-sanity-starter",
+  "name": "tyler-hobbs-studio",
   "private": true,
   "version": "1.0.0",
   "description": "",
@@ -14,22 +14,22 @@
     "sanity"
   ],
   "dependencies": {
-    "@sanity/base": "^2.29.5",
+    "@sanity/base": "^2.3.2",
     "@sanity/components": "^2.14.0",
-    "@sanity/core": "^2.29.5",
-    "@sanity/dashboard": "^2.29.5",
+    "@sanity/core": "^2.3.2",
+    "@sanity/dashboard": "^2.3.2",
     "@sanity/default-layout": "^2.29.7",
-    "@sanity/default-login": "^2.29.5",
+    "@sanity/default-login": "^2.3.2",
     "@sanity/desk-tool": "^2.29.7",
     "@sanity/production-preview": "^2.29.3",
-    "@sanity/vision": "^2.29.5",
+    "@sanity/vision": "^2.3.2",
     "prop-types": "^15.7",
     "react": "^17.0",
     "react-dom": "^17.0",
     "react-icons": "^4.2.0",
     "sanity-mobile-preview": "^1.0.8",
     "sanity-plugin-media": "^1.3.1",
-    "sanity-plugin-order-documents": "^0.0.19",
+    "sanity-plugin-note-field": "^1.1.4",
     "sanity-plugin-vercel-deploy": "^2.0.1",
     "styled-components": "^5.2.0"
   },
