--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   ],
   "dependencies": {
     "@sanity/base": "^2.3.2",
+    "@sanity/code-input": "^2.36.0",
     "@sanity/components": "^2.14.0",
     "@sanity/core": "^2.3.2",
     "@sanity/dashboard": "^2.3.2",
