--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "sanity"
   ],
   "dependencies": {
+    "@codemirror/language": "^6.10.1",
     "@sanity/base": "^2.3.2",
     "@sanity/code-input": "^2.36.0",
     "@sanity/components": "^2.14.0",
@@ -24,6 +25,7 @@
     "@sanity/desk-tool": "^2.29.7",
     "@sanity/production-preview": "^2.29.3",
     "@sanity/vision": "^2.3.2",
+    "ace-builds": "^1.32.6",
     "prop-types": "^15.7",
     "react": "^17.0",
     "react-dom": "^17.0",
